Enhance placement portal and improve frontend